[gd_scene load_steps=17 format=3 uid="uid://vh78pi540b5i"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ccyfdk71bbuky" path="res://ui/panels/unit_controls_panel.tscn" id="2"]
[ext_resource type="Theme" uid="uid://w6f0qhitj51d" path="res://assets/ui/theme/label_theme.tres" id="2_ple64"]
[ext_resource type="PackedScene" uid="uid://b8uav15456lm2" path="res://item/shop.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://y7wlrfeyc2xp" path="res://ui/menus/leader_select_menu.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://dbxqqihthhfid" path="res://ui/minimap.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://dyw87tdsrrqgn" path="res://ui/panels/orders_panel.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://beaxx58y8ho37" path="res://ui/panels/control_panel.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://ceq7l7wrpkgjb" path="res://ui/stats.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://dep3q4yi1ywcn" path="res://ui/panels/dialog_panel.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://cewrcon1yi08d" path="res://ui/menus/main_menu.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://dgyav7j8bd85h" path="res://ui/leaders_quick_icons.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://sd7t4e8pe6ob" path="res://ui/menus/pause_menu.tscn" id="13"]
[ext_resource type="PackedScene" uid="uid://u1q0st63a0fu" path="res://ui/menus/new_game_menu.tscn" id="14"]
[ext_resource type="PackedScene" path="res://ui/scoreboard/scoreboard.tscn" id="18"]
[ext_resource type="Script" path="res://ui/cheat_console.gd" id="19"]

[node name="ui" type="CanvasLayer"]
script = ExtResource("1")

[node name="top_left" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="fps" type="Label" parent="top_left"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 124.0
offset_bottom = 32.0
theme = ExtResource("2_ple64")
text = "FPS
"

[node name="top_mid" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
size_flags_horizontal = 4

[node name="top_label" type="Label" parent="top_mid"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
theme = ExtResource("2_ple64")
text = "Shotcaller
"
horizontal_alignment = 1

[node name="top_right" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="shop" parent="top_right" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 1

[node name="mid_right" type="Control" parent="."]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2

[node name="mid" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(600, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="main_menu" parent="mid" instance=ExtResource("11")]
unique_name_in_owner = true
layout_mode = 2

[node name="pause_menu" parent="mid" instance=ExtResource("13")]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 2

[node name="new_game_menu" parent="mid" instance=ExtResource("14")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="leader_select_menu" parent="mid" instance=ExtResource("4")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="score_board" parent="mid" instance=ExtResource("18")]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 2

[node name="mid_left" type="Control" parent="."]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="leaders_icons" parent="mid_left" instance=ExtResource("12")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -169.0
offset_bottom = 147.0
grow_vertical = 2

[node name="cheat_console" type="TextEdit" parent="mid_left"]
process_mode = 2
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -196.0
offset_right = 132.0
offset_bottom = -174.0
grow_vertical = 2
theme = ExtResource("2_ple64")
theme_override_font_sizes/font_size = 20
placeholder_text = "Console"
context_menu_enabled = false
shortcut_keys_enabled = false
script = ExtResource("19")

[node name="bot_left" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="minimap" parent="bot_left" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 1

[node name="bot_mid" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="stats" parent="bot_mid" instance=ExtResource("9")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="dialog" parent="bot_mid" instance=ExtResource("10")]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -215.0
offset_top = -340.0
offset_right = 205.0
offset_bottom = -200.0

[node name="bot_right" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="orders_panel" parent="bot_right" instance=ExtResource("7")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -390.0
offset_bottom = -190.0
grow_horizontal = 0
grow_vertical = 0

[node name="unit_controls_panel" parent="bot_right" instance=ExtResource("2")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -300.0
offset_bottom = -190.0
grow_horizontal = 0
grow_vertical = 0

[node name="control_panel" parent="bot_right" instance=ExtResource("8")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="version" type="Label" parent="bot_right"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -28.0
offset_right = -4.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_ple64")
text = "version 0.7"
horizontal_alignment = 2
vertical_alignment = 2
